// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`#buildUserGroupRelationships should collect data 1`] = `
Object {
  "collectedEntities": Array [
    Object {
      "_class": Array [
        "Group",
      ],
      "_key": "zendesk_group:360021738231",
      "_rawData": Array [
        Object {
          "name": "default",
          "rawData": Object {
            "created_at": "2021-10-10T20:49:30Z",
            "default": true,
            "deleted": false,
            "description": "",
            "id": 360021738231,
            "name": "Support",
            "updated_at": "2021-10-10T20:49:30Z",
            "url": "https://jupiterone-dev.zendesk.com/api/v2/groups/360021738231.json",
          },
        },
      ],
      "_type": "zendesk_group",
      "createdAt": "2021-10-10T20:49:30Z",
      "createdOn": undefined,
      "deleted": false,
      "description": "",
      "displayName": "Support",
      "id": "360021738231",
      "name": "Support",
      "updatedAt": "2021-10-10T20:49:30Z",
      "url": "https://jupiterone-dev.zendesk.com/api/v2/groups/360021738231.json",
    },
    Object {
      "_class": Array [
        "User",
      ],
      "_key": "zendesk_user:420755677092",
      "_rawData": Array [
        Object {
          "name": "default",
          "rawData": Object {
            "active": true,
            "alias": null,
            "created_at": "2021-10-10T20:49:22Z",
            "custom_role_id": null,
            "default_group_id": 360021738231,
            "details": null,
            "email": "development@jupiterone.dev",
            "external_id": null,
            "iana_time_zone": "America/New_York",
            "id": 420755677092,
            "last_login_at": "2021-11-16T16:05:21Z",
            "locale": "en-US",
            "locale_id": 1,
            "moderator": true,
            "name": "Austin Kelleher",
            "notes": null,
            "only_private_comments": false,
            "organization_id": 361584776731,
            "phone": null,
            "photo": null,
            "report_csv": true,
            "restricted_agent": false,
            "role": "admin",
            "role_type": null,
            "shared": false,
            "shared_agent": false,
            "shared_phone_number": null,
            "signature": null,
            "suspended": false,
            "tags": Array [],
            "ticket_restriction": null,
            "time_zone": "America/New_York",
            "two_factor_auth_enabled": null,
            "updated_at": "2021-11-16T16:05:21Z",
            "url": "https://jupiterone-dev.zendesk.com/api/v2/users/420755677092.json",
            "user_fields": Object {},
            "verified": true,
          },
        },
      ],
      "_type": "zendesk_user",
      "active": true,
      "chatOnly": undefined,
      "createdAt": "2021-10-10T20:49:22Z",
      "createdOn": undefined,
      "defaultGroupId": 360021738231,
      "displayName": "Austin Kelleher",
      "email": "development@jupiterone.dev",
      "ianaTimeZone": "America/New_York",
      "id": "420755677092",
      "locale": "en-US",
      "localeId": 1,
      "moderator": true,
      "name": "Austin Kelleher",
      "organizationId": 361584776731,
      "phone": undefined,
      "photoUrl": undefined,
      "restrictedAgent": false,
      "role": "admin",
      "shared": false,
      "suspended": false,
      "timeZone": "America/New_York",
      "updatedAt": "2021-11-16T16:05:21Z",
      "url": "https://jupiterone-dev.zendesk.com/api/v2/users/420755677092.json",
      "username": "development@jupiterone.dev",
      "verified": true,
    },
    Object {
      "_class": Array [
        "User",
      ],
      "_key": "zendesk_user:420924998451",
      "_rawData": Array [
        Object {
          "name": "default",
          "rawData": Object {
            "active": true,
            "alias": null,
            "created_at": "2021-10-10T20:49:34Z",
            "custom_role_id": null,
            "default_group_id": null,
            "details": null,
            "email": "customer@example.com",
            "external_id": null,
            "iana_time_zone": "America/New_York",
            "id": 420924998451,
            "last_login_at": null,
            "locale": "en-US",
            "locale_id": 1,
            "moderator": false,
            "name": "The Customer",
            "notes": null,
            "only_private_comments": false,
            "organization_id": null,
            "phone": null,
            "photo": Object {
              "content_type": "image/png",
              "content_url": "https://jupiterone-dev.zendesk.com/system/photos/361209460612/profile_image_420924998451_11522198.png",
              "deleted": false,
              "file_name": "profile_image_420924998451_11522198.png",
              "height": 80,
              "id": 361209460612,
              "inline": false,
              "mapped_content_url": "https://jupiterone-dev.zendesk.com/system/photos/361209460612/profile_image_420924998451_11522198.png",
              "size": 10254,
              "thumbnails": Array [
                Object {
                  "content_type": "image/png",
                  "content_url": "https://jupiterone-dev.zendesk.com/system/photos/361209460612/profile_image_420924998451_11522198_thumb.png",
                  "deleted": false,
                  "file_name": "profile_image_420924998451_11522198_thumb.png",
                  "height": 32,
                  "id": 361209460632,
                  "inline": false,
                  "mapped_content_url": "https://jupiterone-dev.zendesk.com/system/photos/361209460612/profile_image_420924998451_11522198_thumb.png",
                  "size": 2402,
                  "url": "https://jupiterone-dev.zendesk.com/api/v2/attachments/361209460632.json",
                  "width": 32,
                },
              ],
              "url": "https://jupiterone-dev.zendesk.com/api/v2/attachments/361209460612.json",
              "width": 80,
            },
            "report_csv": false,
            "restricted_agent": true,
            "role": "end-user",
            "role_type": null,
            "shared": false,
            "shared_agent": false,
            "shared_phone_number": null,
            "signature": null,
            "suspended": false,
            "tags": Array [],
            "ticket_restriction": "requested",
            "time_zone": "America/New_York",
            "two_factor_auth_enabled": false,
            "updated_at": "2021-10-10T20:49:36Z",
            "url": "https://jupiterone-dev.zendesk.com/api/v2/users/420924998451.json",
            "user_fields": Object {},
            "verified": false,
          },
        },
      ],
      "_type": "zendesk_user",
      "active": true,
      "chatOnly": undefined,
      "createdAt": "2021-10-10T20:49:34Z",
      "createdOn": undefined,
      "defaultGroupId": undefined,
      "displayName": "The Customer",
      "email": "customer@example.com",
      "ianaTimeZone": "America/New_York",
      "id": "420924998451",
      "locale": "en-US",
      "localeId": 1,
      "moderator": false,
      "name": "The Customer",
      "organizationId": undefined,
      "phone": undefined,
      "photoUrl": "https://jupiterone-dev.zendesk.com/system/photos/361209460612/profile_image_420924998451_11522198.png",
      "restrictedAgent": true,
      "role": "end-user",
      "shared": false,
      "suspended": false,
      "timeZone": "America/New_York",
      "updatedAt": "2021-10-10T20:49:36Z",
      "url": "https://jupiterone-dev.zendesk.com/api/v2/users/420924998451.json",
      "username": "customer@example.com",
      "verified": false,
    },
  ],
  "collectedRelationships": Array [
    Object {
      "_class": "HAS",
      "_fromEntityKey": "zendesk_group:360021738231",
      "_key": "zendesk_group:360021738231|has|zendesk_user:420755677092",
      "_toEntityKey": "zendesk_user:420755677092",
      "_type": "zendesk_group_has_user",
      "displayName": "HAS",
    },
  ],
  "encounteredTypes": Array [
    "zendesk_group",
    "zendesk_user",
    "zendesk_group_has_user",
  ],
  "numCollectedEntities": 3,
  "numCollectedRelationships": 1,
}
`;

exports[`#fetchUsers should collect data 1`] = `
Object {
  "collectedEntities": Array [
    Object {
      "_class": Array [
        "User",
      ],
      "_key": "zendesk_user:420755677092",
      "_rawData": Array [
        Object {
          "name": "default",
          "rawData": Object {
            "active": true,
            "alias": null,
            "created_at": "2021-10-10T20:49:22Z",
            "custom_role_id": null,
            "default_group_id": 360021738231,
            "details": null,
            "email": "development@jupiterone.dev",
            "external_id": null,
            "iana_time_zone": "America/New_York",
            "id": 420755677092,
            "last_login_at": "2021-11-08T13:31:25Z",
            "locale": "en-US",
            "locale_id": 1,
            "moderator": true,
            "name": "Austin Kelleher",
            "notes": null,
            "only_private_comments": false,
            "organization_id": 361584776731,
            "phone": null,
            "photo": null,
            "report_csv": true,
            "restricted_agent": false,
            "role": "admin",
            "role_type": null,
            "shared": false,
            "shared_agent": false,
            "shared_phone_number": null,
            "signature": null,
            "suspended": false,
            "tags": Array [],
            "ticket_restriction": null,
            "time_zone": "America/New_York",
            "two_factor_auth_enabled": null,
            "updated_at": "2021-11-08T13:31:25Z",
            "url": "https://jupiterone-dev.zendesk.com/api/v2/users/420755677092.json",
            "user_fields": Object {},
            "verified": true,
          },
        },
      ],
      "_type": "zendesk_user",
      "active": true,
      "chatOnly": undefined,
      "createdAt": "2021-10-10T20:49:22Z",
      "createdOn": undefined,
      "defaultGroupId": 360021738231,
      "displayName": "Austin Kelleher",
      "email": "development@jupiterone.dev",
      "ianaTimeZone": "America/New_York",
      "id": "420755677092",
      "locale": "en-US",
      "localeId": 1,
      "moderator": true,
      "name": "Austin Kelleher",
      "organizationId": 361584776731,
      "phone": undefined,
      "photoUrl": undefined,
      "restrictedAgent": false,
      "role": "admin",
      "shared": false,
      "suspended": false,
      "timeZone": "America/New_York",
      "updatedAt": "2021-11-08T13:31:25Z",
      "url": "https://jupiterone-dev.zendesk.com/api/v2/users/420755677092.json",
      "username": "development@jupiterone.dev",
      "verified": true,
    },
    Object {
      "_class": Array [
        "User",
      ],
      "_key": "zendesk_user:420924998451",
      "_rawData": Array [
        Object {
          "name": "default",
          "rawData": Object {
            "active": true,
            "alias": null,
            "created_at": "2021-10-10T20:49:34Z",
            "custom_role_id": null,
            "default_group_id": null,
            "details": null,
            "email": "customer@example.com",
            "external_id": null,
            "iana_time_zone": "America/New_York",
            "id": 420924998451,
            "last_login_at": null,
            "locale": "en-US",
            "locale_id": 1,
            "moderator": false,
            "name": "The Customer",
            "notes": null,
            "only_private_comments": false,
            "organization_id": null,
            "phone": null,
            "photo": Object {
              "content_type": "image/png",
              "content_url": "https://jupiterone-dev.zendesk.com/system/photos/361209460612/profile_image_420924998451_11522198.png",
              "deleted": false,
              "file_name": "profile_image_420924998451_11522198.png",
              "height": 80,
              "id": 361209460612,
              "inline": false,
              "mapped_content_url": "https://jupiterone-dev.zendesk.com/system/photos/361209460612/profile_image_420924998451_11522198.png",
              "size": 10254,
              "thumbnails": Array [
                Object {
                  "content_type": "image/png",
                  "content_url": "https://jupiterone-dev.zendesk.com/system/photos/361209460612/profile_image_420924998451_11522198_thumb.png",
                  "deleted": false,
                  "file_name": "profile_image_420924998451_11522198_thumb.png",
                  "height": 32,
                  "id": 361209460632,
                  "inline": false,
                  "mapped_content_url": "https://jupiterone-dev.zendesk.com/system/photos/361209460612/profile_image_420924998451_11522198_thumb.png",
                  "size": 2402,
                  "url": "https://jupiterone-dev.zendesk.com/api/v2/attachments/361209460632.json",
                  "width": 32,
                },
              ],
              "url": "https://jupiterone-dev.zendesk.com/api/v2/attachments/361209460612.json",
              "width": 80,
            },
            "report_csv": false,
            "restricted_agent": true,
            "role": "end-user",
            "role_type": null,
            "shared": false,
            "shared_agent": false,
            "shared_phone_number": null,
            "signature": null,
            "suspended": false,
            "tags": Array [],
            "ticket_restriction": "requested",
            "time_zone": "America/New_York",
            "two_factor_auth_enabled": false,
            "updated_at": "2021-10-10T20:49:36Z",
            "url": "https://jupiterone-dev.zendesk.com/api/v2/users/420924998451.json",
            "user_fields": Object {},
            "verified": false,
          },
        },
      ],
      "_type": "zendesk_user",
      "active": true,
      "chatOnly": undefined,
      "createdAt": "2021-10-10T20:49:34Z",
      "createdOn": undefined,
      "defaultGroupId": undefined,
      "displayName": "The Customer",
      "email": "customer@example.com",
      "ianaTimeZone": "America/New_York",
      "id": "420924998451",
      "locale": "en-US",
      "localeId": 1,
      "moderator": false,
      "name": "The Customer",
      "organizationId": undefined,
      "phone": undefined,
      "photoUrl": "https://jupiterone-dev.zendesk.com/system/photos/361209460612/profile_image_420924998451_11522198.png",
      "restrictedAgent": true,
      "role": "end-user",
      "shared": false,
      "suspended": false,
      "timeZone": "America/New_York",
      "updatedAt": "2021-10-10T20:49:36Z",
      "url": "https://jupiterone-dev.zendesk.com/api/v2/users/420924998451.json",
      "username": "customer@example.com",
      "verified": false,
    },
  ],
  "collectedRelationships": Array [],
  "encounteredTypes": Array [
    "zendesk_user",
  ],
  "numCollectedEntities": 2,
  "numCollectedRelationships": 0,
}
`;
